bk_ida/gccida/c3/push_init_level
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5746:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5749:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5754:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5777:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5781:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5802:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0->implicit ) 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5855:12: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v7->next = constructor_stack_0; 
           ^~~~~~~~~~~~~~~~~~~
           constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5857:7: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v11 = spelling_0; 
      ^~~~~~~~~~
      spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5859:37: error: use of undeclared identifier 'spelling_0'
v13 = ( unsigned __int64)( ( char *)spelling_0 - ( char *)spelling_base) >> 4; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5860:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = v7; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5875:19: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
v7->range_stack = constructor_range_stack_0; 
                  ^~~~~~~~~~~~~~~~~~~~~~~~~
                  constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5876:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5916:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v11; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5930:7: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v11 = spelling_0; 
      ^~~~~~~~~~
      spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5931:37: error: use of undeclared identifier 'spelling_0'
v19 = ( unsigned __int64)( ( char *)spelling_0 - ( char *)spelling_base) >> 4; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5942:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v11; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:5947:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v11 + 1; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:6012:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v28 = ( tree)v27[7]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/c-typeck.c:6025:20: error: expected expression
v33 = ( tree_node *)*( &global_trees + 17); 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_init_level/src/obj/c-typeck.o] Error 1
